client/src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
@import './app//shared/directives/tooltip.scss';
:root {
  --accent-color: #a78bfa;

  --light-grey: #f0f0f0;
  --dark-grey: #222222;
  --border-color: #e2e8f0;
}

* {
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  background-repeat: repeat;
  background-image: url('/images/background/white-3.avif');
}

.background-image {
  background-image: url('/images/background/white-3.avif');
}

.blur-background .outlet-wrapper {
  filter: blur(2px);
  transition: filter 0.3s ease-in-out;
}

.outlet-wrapper {
  padding-top: 4.5rem;
  padding-inline: 7.5%;
}
@media screen and (max-width: 786px) {
  .outlet-wrapper {
    padding-inline: 4%;
  }
}

.modal-content {
  background-image: linear-gradient(rgba(240, 240, 240, 0.6), rgba(250, 250, 250, 0.65)),
    url('/images/background/white-3.avif');
  background-size: cover;
  background-repeat: no-repeat;
}

.modal-header,
.modal-body,
.modal-footer {
  background-color: transparent !important;
}

input.form-control,
select.form-control,
textarea.form-control {
  background: inherit;
}

@media screen and (min-width: 1200px) {
  body {
    background-image: none;
  }

  .background-image {
    background: none;
  }

  .modal-content {
    background: white;
  }
}

